# Warframe-Exporter

./: .gitmodules  CMakeLists.txt  Compiling.md  Exporter.ui  Picker.ui  README.md
.gitea/workflows/: build.yaml
.github/workflows/: build.yaml
assets/: DesktopEntry.desktop  resources.qrc  resources.rc
include/: BaseExtractor.h  BatchExtractor.h  BatchIterator.h  BatchIteratorDebug.h  BatchIteratorExport.h  CLI-Advanced.h  CLI-Debug.h  CLI-Extract.h  CLI-Feature.h  CLI-Main.h  CLI.h  CacheReaderLimited.h  CommonHeader.h  DebugUtils.h  Ensmallening.hpp  EnumMap.h  EnumMapExtractor.h  EnumMapExtractorClass.h  EnumMapExtractorValue.h  EnumMapGame.h  EnumMapValue.h  Enums.h  ExportDebugger.h  ExportPathManager.h  ExportSingleFile.h  ExporterExceptions.h  ExporterLogger.h  ExtractFile.h  ExtractOptions.h  Extractor.h  FileProperties.h  FileType.hpp  FileTypeMap.hpp  Logger.h  Meta.h
include/animation/: AnimationConverter.h  AnimationEnumMap.h  AnimationExporterGltf.h  AnimationExtractor.h  AnimationReader.h  AnimationStructs.hpp
include/animation/types/: AnimationReader128.h  AnimationReader132.h
include/audio/: AudioExtractorProxy.h  AudioReader.h  AudioStructs.h  EnumMapAudioExtractor.h  README.md
include/audio/AudioOpus/: AudioOpusExporterOGG.h  AudioOpusExporterOggChecksum.h  AudioOpusExtractor.h  (+2 more)
include/cli/: CLI-Advanced.h  CLI-Debug.h  CLI-Extract.h  CLI-Feature.h  CLI-Main.h  CLI-Output.h  CLI-Output.sync-conflict-20231227-201528-QED7SWD.h  CLI.h
include/icon/: IconExtractor.h
include/landscape/: LandscapeConverter.h  LandscapeEnumMap.h  LandscapeExporterGltf.h  LandscapeExtractor.h  LandscapeReader.h  LandscapeStructs.h  LandscapeTypes.h
include/level/: LevelConverter.h  LevelEnumMap.h  LevelExporterGltf.h  LevelExtractOptions.h  LevelExtractor.h  LevelReader.h  LevelStructs.h  LevelTypes.h
include/levelstatic/: LevelStaticConverter.h  LevelStaticEnumMap.h  LevelStaticExporterGltf.h  LevelStaticExtractor.h  LevelStaticReader.h  LevelStaticStructs.h  LevelStaticTypes.h
include/material/: ExtractorMaterial.h  MaterialConverter.h  MaterialEnumMap.h  MaterialExporter.h  MaterialExtractOptions.h  MaterialExtractor.h  MaterialReader.h  MaterialStructs.h  MaterialTypes.h
include/model/: EnumModelMap.h  ExtractorModel.h  GltfExporter.h  ModelConverter.h  ModelEnumMap.h  ModelExporterGltf.h  ModelExtractor.h  ModelReader.h  ModelStructs.hpp  ModelTypes.h  VertexColor.h  WFModelReader.h
include/shader/: ShaderConverter.h  ShaderConverterD3D.h  ShaderDecompressZstd.h  ShaderEnumMap.h  ShaderExportType.h  ShaderExtractor.h  ShaderReader.h  ShaderStructs.h  ShaderTypes.h
include/texture/: EnumMapTexture.h  ExtractorTexture.h  TextureBody.h  TextureConverter.h  TextureEnumMap.h  TextureEnums.hpp  TextureExportTypes.h  TextureExporterConvert.h  TextureExporterDDS.h  TextureExtractor.h  TextureFormats.h  TextureHeader.h  TextureInfo.h  TextureInfos.h  TextureReader.h  TextureStructs.hpp  TextureTypes.h  ddspp.hpp
include/ui/: BatchIteratorExportQt.h  ExporterDirectoryThread.h  ExporterFileThread.h  ExporterThread.h  FormatPreview1.h  MetadataPreview.h  Settings.h  TreeItemSubtypes.h  UIExporter.h  UILoading.h  UIMainWindow.h  UIPicker.h  ui.h  ui_AdditionalSettings.h  ui_Exporter.h  ui_Loading.h  ui_Picker.h
lib/membuf/: membuf.hpp
src/: BaseExtractor.cpp  BatchExtractor.cpp  BatchIterator.cpp  BatchIteratorDebug.cpp  BatchIteratorExport.cpp  CLI-Advanced.cpp  CLI-Debug.cpp  CLI-Extract.cpp  CLI-Main.cpp  CLI.cpp  CacheReaderLimited.cpp  CommonHeader.cpp  DebugUtils.cpp  EnumMapExtractorClass.cpp  ExportDebugger.cpp  ExportPathManager.cpp  ExportSingleFile.cpp  ExporterExceptions.cpp  ExtractFile.cpp  Extractor.cpp  FileProperties.cpp  Logger.cpp
src/animation/: AnimationConverter.cpp  AnimationExporterGLTF.cpp  AnimationExporterGltf.cpp  AnimationExtractor.cpp
src/audio/: AudioExtractorProxy.cpp
src/cli/: CLI-Advanced.cpp  CLI-Debug.cpp  CLI-Extract.cpp  CLI-Main.cpp  CLI.cpp
src/icon/: IconExtractor.cpp
src/landscape/: LandscapeConverter.cpp  LandscapeExporterGltf.cpp  LandscapeExtractor.cpp  LandscapeReader.cpp
src/level/: LevelConverter.cpp  LevelExporterGltf.cpp  LevelExtractor.cpp
src/levelstatic/: LevelStaticConverter.cpp  LevelStaticExporterGltf.cpp  LevelStaticExtractor.cpp
src/material/: ExtractorMaterial.cpp  MaterialConverter.cpp  MaterialExporter.cpp  MaterialExtractor.cpp  MaterialReader.cpp
src/model/: ExtractorModel.cpp  GltfExporter.cpp  ModelConverter.cpp  ModelExporterGltf.cpp  ModelExtractor.cpp  ModelReader.cpp  VertexColor.cpp
src/shader/: ShaderConverter.cpp  ShaderConverterD3D.cpp  ShaderDecompressZstd.cpp  ShaderExtractor.cpp  ShaderReader.cpp
src/texture/: ExtractorTexture.cpp  TextureBody.cpp  TextureConverter.cpp  TextureExporterConvert.cpp  TextureExporterDDS.cpp  TextureExtractor.cpp  TextureFormats.cpp  TextureHeader.cpp  TextureInfos.cpp  TextureReader.cpp  dds.cpp
src/ui/: BatchIteratorExportQt.cpp  ExporterDirectoryThread.cpp  ExporterFileThread.cpp  ExporterThread.cpp  FormatPreview1.cpp  MetadataPreview.cpp  Settings.cpp  TreeItemSubtypes.cpp  UIExporter.cpp  UILoading.cpp  UIMainWindow.cpp  UIPicker.cpp  ui.cpp
ui/: AdditionalSettings.ui  Exporter.ui  Loading.ui  Picker.ui
util/: Animation128.bt  CommonHeader.bt  Level196.bt  Model269.bt  Model96.bt  wf_animation132.hexpat  wf_common-header.hexpat  wf_landscape42.hexpat  wf_level201.hexpat  wf_level212.hexpat  wf_levelstatic_28.hexpat  wf_levelstatic_29.hexpat  wf_levelstatic_34.hexpat  wf_material208.hexpat  wf_model101.hexpat  wf_model102.hexpat  wf_model102SF.hexpat  wf_model102WF.hexpat  wf_model102_105.hexpat  wf_model103.hexpat  wf_model105.hexpat  wf_model105SF.hexpat  wf_model105WF.hexpat  wf_model106.hexpat  wf_model109.hexpat  wf_model109SF.hexpat  wf_model109WF.hexpat  wf_model112.hexpat  wf_model159.hexpat  wf_model160.hexpat  wf_model269.hexpat  wf_model26X_27X.hexpat  wf_model272.hexpat  wf_model281.hexpat  wf_model283.hexpat  wf_model287.hexpat  wf_model289.hexpat  wf_model290.hexpat  wf_model299.hexpat  wf_model300-301.hexpat  (+24 more)
(+192 files in other folders)
